--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="cursor"></div>
     <div id="contact-toast" class="flex items-center gap-4">
         <div class="bg-[#187cf4] rounded-full w-8 h-8 flex items-center justify-center shrink-0"><i class="fas fa-check text-xs"></i></div>
-        <div><p class="text-[10px] uppercase tracking-widest font-bold opacity-60">Success</p><p class="text-sm font-bold">contact@jcustoms.org</p></div>
+        <div><p class="text-[10px] uppercase tracking-widest font-bold opacity-60">Copied</p><p class="text-sm font-bold">contact@jcustoms.org</p></div>
     </div>
 
     <div id="mobile-menu">
@@ -86,7 +86,7 @@
 
     <main id="home-page" class="page active-page container mx-auto px-6">
         <section class="text-center pt-12 md:pt-24 pb-20 flex flex-col items-center">
-            <h1 class="text-5xl md:text-8xl font-extrabold mb-12 tracking-tighter leading-tight uppercase">Bringing your <br><span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-blue-600">vision</span> to life.</h1>
+            <h1 class="text-5xl md:text-8xl font-extrabold mb-12 tracking-tighter leading-tight">Bringing your <br><span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-blue-600">vision</span> to life.</h1>
             <a href="https://discord.gg/judah" target="_blank" class="discord-glass-widget group p-6 rounded-[2.5rem] w-full max-w-md flex flex-col gap-6 hover:scale-[1.02] transition-all duration-500 relative overflow-hidden" data-tilt>
                 <div class="absolute -top-10 -right-10 w-32 h-32 bg-blue-500/10 blur-[50px] rounded-full"></div>
                 <div class="flex items-center justify-between relative z-10">
