--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Judah's Customs</title>
+    <link rel="icon" type="image/png" href="assets/titleicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -131,10 +132,6 @@
     <main id="work-page" class="page container mx-auto px-6 pt-10">
         <h2 class="text-4xl font-black mb-12 uppercase">Work<span class="text-[#187cf4]">.</span></h2>
         <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 pb-20">
-            <div class="work-item"><img src="assets/dubaiwork1.png" class="work-img" onclick="openLightbox(this.src)" data-tilt></div>
-            <div class="work-item"><img src="assets/dubaiwork2.png" class="work-img" onclick="openLightbox(this.src)" data-tilt></div>
-            <div class="work-item"><img src="assets/judahwork1.png" class="work-img" onclick="openLightbox(this.src)" data-tilt></div>
-            <div class="work-item"><img src="assets/judahwork2.png" class="work-img" onclick="openLightbox(this.src)" data-tilt></div>
             <div class="work-item"><img src="assets/design1.png" class="work-img" onclick="openLightbox(this.src)" data-tilt></div>
             <div class="work-item"><img src="assets/design2.png" class="work-img" onclick="openLightbox(this.src)" data-tilt></div>
             <div class="work-item"><img src="assets/design3.png" class="work-img" onclick="openLightbox(this.src)" data-tilt></div>
