--- a/index.html
+++ b/index.html
@@ -583,6 +583,8 @@
 
         VanillaTilt.init(document.querySelectorAll("[data-tilt]"), { max: 10, speed: 400, glare: true, "max-glare": 0.1 });
     </script>
+    <script src="container-logic.js"></script>
+    <script src="init-container.js"></script>
     <script src="admin-logic.js"></script>
     <script src="form-logic.js"></script>
 </body>
