--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Bringing your vision to life one step at a time, place your order today @ Judah's Customs.">
+    <meta name="theme-color" content="#187cf4">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Judah's Customs</title>
