--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta name="description" content="Bringing your vision to life one step at a time, place your order today @ Judah's Customs.">
     <meta name="theme-color" content="#187cf4">
+    <meta property="og:image" content="assets/iconbannerfooter.png">
+    <meta name="twitter:card" content="summary_large_image">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Judah's Customs</title>
